hphp/hack/test/typecheck/coeffects/conformance/user-defined-type_as_context.php.exp
File "user-defined-type_as_context.php", line 4, characters 42-48:
Illegal context: `\Clazz`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "user-defined-type_as_context.php", line 7, characters 46-52:
Illegal context: `\Iface`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "user-defined-type_as_context.php", line 10, characters 33-39:
Illegal context: `\Clazz`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "user-defined-type_as_context.php", line 11, characters 37-43:
Illegal context: `\Iface`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
